--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       crossorigin="anonymous"
     >
 
+    <script src="https://use.fontawesome.com/685cbfd1f0.js"></script>
+
     <title>Find My Driving Instructor . Com</title>
   </head>
 
