--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
 
     <script src="https://use.fontawesome.com/685cbfd1f0.js"></script>
 
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCd5WYdM03hqbS74XrUXtYooNrKmUPW5w4&callback=initMap"
+      async 
+      defer
+    >
+    </script> -->
+
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCd5WYdM03hqbS74XrUXtYooNrKmUPW5w4"
+      async 
+      defer
+    >
+    </script> -->
+
+    <!-- <script type="text/javascript" 
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initService"
+      async 
+      defer
+    >
+    </script> -->
+
     <title>Find My Driving Instructor . Com</title>
   </head>
 
