began implementing instructor induction steps

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 
     <script src="https://use.fontawesome.com/685cbfd1f0.js"></script>
 
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
+      rel="stylesheet" 
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" 
+      crossorigin="anonymous"
+    >
+
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCd5WYdM03hqbS74XrUXtYooNrKmUPW5w4&callback=initMap"
       async 
       defer
